--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     },
     "dependencies": {
         "framer-motion": "^11.3.19",
+        "localforage": "^1.10.0",
         "react": "^18.3.1",
         "react-aria": "^3.34.1",
         "react-dom": "^18.3.1",
+        "react-router-dom": "^6.25.1",
         "react-stately": "^3.32.1"
     },
     "devDependencies": {
